@@ -885,21 +885,6 @@ __PACKAGE__->belongs_to(
   },
 );
 
-=head2 iseq_heron_product_metric
-
-Type: might_have
-
-Related object: L<WTSI::DNAP::Warehouse::Schema::Result::IseqHeronProductMetric>
-
-=cut
-
-__PACKAGE__->might_have(
-  'iseq_heron_product_metric',
-  'WTSI::DNAP::Warehouse::Schema::Result::IseqHeronProductMetric',
-  { 'foreign.id_iseq_product' => 'self.id_iseq_product' },
-  { cascade_copy => 0, cascade_delete => 0 },
-);
-
 =head2 iseq_product_components
 
 Type: has_many
@@ -953,13 +938,15 @@ __PACKAGE__->belongs_to(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07049 @ 2020-06-11 17:00:44
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:WmrUdOLNhyMKAhrgNZCLzw
+# Created by DBIx::Class::Schema::Loader v0.07049 @ 2020-07-16 16:20:22
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:7bfqP9vnlQ7g6s17gXNkrA
 
 
 # You can replace this text with custom code or comments, and it will be preserved on regeneration
 
 our $VERSION = '0';
+
+=head1 RELATIONS
 
 =head2 iseq_run_lane_metric_right
 
@@ -1009,6 +996,21 @@ __PACKAGE__->has_many(
     'foreign.id_iseq_product' => 'self.id_iseq_product',
   },
   { is_deferrable => 1, cascade_copy => 0, cascade_delete => 0 },
+);
+
+=head2 iseq_heron_product_metric
+
+Type: might_have
+
+Related object: L<WTSI::DNAP::Warehouse::Schema::Result::IseqHeronProductMetric>
+
+=cut
+
+__PACKAGE__->might_have(
+  'iseq_heron_product_metric',
+  'WTSI::DNAP::Warehouse::Schema::Result::IseqHeronProductMetric',
+  { 'foreign.id_iseq_product' => 'self.id_iseq_product' },
+  { cascade_copy => 0, cascade_delete => 0 },
 );
 
 ##no critic (ProhibitStringyEval ProhibitPostfixControls ProhibitInterpolationOfLiterals)
